src/main/java/com/example/deliveryoutsourcing/global/error/response/ErrorResponse.java
package com.example.deliveryoutsourcing.global.error.response;

import com.fasterxml.jackson.annotation.JsonPropertyOrder;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@Getter
@Setter
@NoArgsConstructor
@JsonPropertyOrder({"code", "status", "message", "timestamp"})
public class ErrorResponse implements ExceptionStatus {

    private int code;
    private int status;
    private String message;

    public ErrorResponse(ExceptionStatus status) {
        this.code = status.getCode();
        this.status = status.getStatus();
        this.message = status.getMessage();
    }

    @Override
    public int getCode() {
        return code;
    }

    @Override
    public int getStatus() {
        return status;
    }

    @Override
    public String getMessage() {
        return message;
    }
}
